--- a/views/index.hbs
+++ b/views/index.hbs
@@ -96,7 +96,7 @@ localStorage.setItem("previouschat","");
  }
 
 var url="https://med-ai-et9j.onrender.com";
-//url="http://localhost:5000";
+{{!-- var url="http://localhost:5000"; --}}
 
 
   const chatbotToggler = document.querySelector(".chatbot-toggler");
