--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -175,7 +175,7 @@
             <div class="quixnav-scroll">
                 <ul class="metismenu" id="menu">
                 <li class="nav-label first">
-                <a class="has-arrow" href="index.html">HOME</a>
+                <a class="has-arrow" href="https://med-ai-et9j.onrender.com">HOME</a>
 
                 </li>
             </ul>
