--- a/views/index.hbs
+++ b/views/index.hbs
@@ -98,8 +98,8 @@ localStorage.setItem("previouschat","");
  else{
  }
 
-{{!-- var url="https://med-ai-et9j.onrender.com"; --}}
-var url="http://localhost:5000";
+var url="https://med-ai-et9j.onrender.com";
+{{!-- var url="http://localhost:5000"; --}}
 
 
   const chatbotToggler = document.querySelector(".chatbot-toggler");
