--- a/views/index.hbs
+++ b/views/index.hbs
@@ -365,7 +365,7 @@ var ans="";
 
       fetch(url+"/output", {
       method: "POST",
-         mode: "no-cors",
+         {{!-- mode: "no-cors", --}}
       headers: {
         Accept: "application/json",
         "Content-Type": "application/json",
