--- a/views/index.hbs
+++ b/views/index.hbs
@@ -379,6 +379,7 @@ var ans="";
       .then((res) => res.json())
       .then((data) => {
         console.log(data);
+        alert(data);
 ans=data;
        
       })
