--- a/views/index.hbs
+++ b/views/index.hbs
@@ -100,9 +100,9 @@ localStorage.setItem("previouschat","");
  else{
  }
 
-var url="https://med-ai-et9j.onrender.com";
+{{!-- var url="https://med-ai-et9j.onrender.com"; --}}
 {{!-- var url="http://localhost:5000"; --}}
-
+var url="https://97200db3-8b2b-4066-9f08-0206f758f97a-00-2ntk0szsuha4b.spock.replit.dev";
 
   const chatbotToggler = document.querySelector(".chatbot-toggler");
 const closeBtn = document.querySelector(".close-btn");
